@@ -1,5 +1,12 @@
 PHORONIX TEST SUITE CHANGE-LOG
 
+Phoronix Test Suite (Git)
+
+pts-core: Documentation updates
+pts-core: External dependency updates
+pts-core: Allow listing test profiles within the result viewer
+pts-core: Various other updates to the result viewer
+
 Phoronix Test Suite 9.6.0 Milestone 1
 24 March 2020
 
